Add necessary --add-opens for JDK 17
This CL prepares necessary --add-opens configurations for upcoming JDK
17 support.

Signed-off-by: utzcoz <utzcoz@outlook.com>